# taiko-explorer-backend

./: Cargo.toml  README.md
migrations/2025-11-03-133626_create_blocks_table/: up.sql
migrations/2025-11-18-095122-0000_add_materialized_view_auto_refresh/: down.sql  up.sql
src/: indexer.rs  main.rs  mega_batch_indexer.rs  schema.rs
src/analytics/: analytics.rs
src/api/: server.rs
src/db/: address_analytics.rs  connection.rs  mod.rs  operations.rs
src/graphql/: address_resolvers.rs  resolvers.rs
src/models/: address_analytics.rs
src/rpc/: client.rs  types.rs
