[package]
name = "taiko-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "numeric"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenv = "0.15"
config = "0.14"
deadpool = "0.12"
deadpool-diesel = "0.6"
bigdecimal = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
